...
        radius: kLogoRadius,
        child: Image.asset('assets/logo-blue-black.png'),
      ),
    );

    final email = TextFormField(
      key: ValueKey("emailField"),
      controller: _emailField,
      keyboardType: TextInputType.emailAddress,
      autofocus: false,
      decoration: InputDecoration(
        hintText: 'Email',
        contentPadding: EdgeInsets.fromLTRB(kDefaultPadding,
...
      ),
      validator: MultiValidator([
        RequiredValidator(errorText: "* Required"),
        EmailValidator(errorText: "Invalid Email"),
      ]),
    );
    final invalidLoginLabel = Text("Invalid Login Credentials",
        style: TextStyle(backgroundColor: kErrorColor, color: Colors.white));

    final invalidRegisterLabel = Text(invalidRegisterText,
        style: TextStyle(backgroundColor: kErrorColor, color: Colors.white));

    final password = TextFormField(
      key: ValueKey("passwordField"),
      controller: _passwordField,
      autofocus: false,
      obscureText: true,
      decoration: InputDecoration(
        hintText: 'Password',
        contentPadding: EdgeInsets.fromLTRB(kDefaultPadding,
...
        border: OutlineInputBorder(
            borderRadius: BorderRadius.circular(kFormBorderRadius)),
      ),
    );

    final registerPassword = TextFormField(
        key: ValueKey("registerPasswordField"),
        controller: _registerPasswordField,
        autofocus: false,
        obscureText: true,
        decoration: InputDecoration(
          hintText: 'Password',
          contentPadding: EdgeInsets.fromLTRB(kDefaultPadding,
...
              errorText: "Password should be at least 6 characters"),
          MaxLengthValidator(15,
              errorText: "Password should not be greater than 15 characters")
        ]));

    final loginButton = FormButton(
        key: ValueKey("loginButton"),
        press: () async {
          try {
            bool loginSuccess = await context
                .read<AuthenticationService>()
                .signIn(
                    email: _emailField.text.trim(),
...
            });
          }
        },
        text: "Log In");

    final registerButton = FormButton(
        key: ValueKey("RegisterBtn"),
        press: () async {
          try {
            String registerResult = await context
                .read<AuthenticationService>()
                .signUp(
                    email: _emailField.text.trim(),
...
        style: TextStyle(color: kHintColor),
      ),
      onPressed: () {},
    );

    final registerLabel = FlatButton(
      key: ValueKey("OpenRegisterBtn"),
      child: Text(
        'No Account? Register',
        style: TextStyle(color: kHintColor),
      ),
      onPressed: () {
        _emailField.clear();
...
          invalidRegister = false;
        });
      },
    );

    final signInLabel = FlatButton(
      key: ValueKey("OpenLoginBtn"),
      child: Text(
        'Already Registered? Sign In',
        style: TextStyle(color: kHintColor),
      ),
      onPressed: () {
        _emailField.clear();
...
