...
                      Row(
                        children: [
                          SizedBox(
                            width: 10,
                          ),
                          GestureDetector(
                            key: ValueKey("UserVideoProfileBtn"),
                            onTap: () {
                              Navigator.pushAndRemoveUntil(
                                  context,
                                  MaterialPageRoute(
                                      builder: (context) => ProfileScreen(
                                          widget.user, isFollowing)),
...
                                )),
                          ),
                          SizedBox(
                            width: 10,
                          ),
                          Text(widget.user.handle,
                              key: ValueKey("UserVideoHandle"),
                              style: TextStyle(
                                  color: Colors.white,
                                  fontWeight: FontWeight.bold,
                                  fontSize: 20)),
                        ],
                      ),
                      Column(
                        //mainAxisAlignment: MainAxisAlignment.end,
                        children: [
                          MaterialButton(
                            key: ValueKey("likeUnlikeBtn"),
                            shape: CircleBorder(),
                            onPressed: () async {
                              // setState(() {
                              //   isLiked = !isLiked;
                              // });
                              await FirebaseService()
...
                              }
                            },
                            child: Icon(Icons.favorite,
                                color: likeColor, size: playerWidth * 0.08),
                          ),
                          Text("${numLikes.toString()}",
                              key: ValueKey("NumLikesTxt"),
                              style: TextStyle(
                                color: Colors.white,
                              )),
                          MaterialButton(
                            shape: CircleBorder(),
                            onPressed: () {
...
                    mainAxisAlignment: MainAxisAlignment.start,
                    children: [
                      SizedBox(
                        width: 10,
                      ),
                      Text(widget.videoPost.postDescription,
                          key: ValueKey("UserVideoDesc"),
                          textAlign: TextAlign.left,
                          style: TextStyle(color: Colors.white)),
                    ],
                  ),
                  SizedBox(
                    height: 10,
...
